add new features

--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,12 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/style.css" />
-		<title>ShakaibChat App</title>
+		<title>ChillChat App</title>
 	</head>
 	<body>
 		<div class="join-container">
 			<header class="join-header">
-				<h1><i class="fas fa-smile"></i> ShakaibChat</h1>
+				<h1><i class="fas fa-smile"></i> ChillChat</h1>
 			</header>
 			<main class="join-main">
 				<form action="chat.html">
@@ -34,8 +34,8 @@
 						<label for="room">Room</label>
 						<input
 							type="text"
-							name="roomId"
-							id="roomId"
+							name="room"
+							id="room"
 							placeholder="Enter room name..."
 							required
 						/>
